--- a/www/index.html
+++ b/www/index.html
@@ -70,7 +70,7 @@
     }
 
     function countData() {
-      $("#display").html("count does not work");
+
     }
 
     function deleteData() {
@@ -92,7 +92,23 @@
     }
 
     function updateData() {
-      $("#display").html("update does not work");
+        UTdata.fetch()
+        .then(function(results) {
+          let value = parseInt($("#update").val());
+          results.set(key,value);
+          return results.update();
+          })
+          .then(function(results){
+          $("#display").removeClass();
+          $("#display").addClass("text-light");
+          $("#display").addClass("bg-primary");
+          $("#display").html(msg);
+        })
+        .catch(function(error) {
+          $("#display").removeClass();
+          $("#display").addClass("bg-warning");
+          $("#display").html("delete fail:" + JSON.stringify(error));
+    })
     }
   </script>
 </head>
