--- a/www/index.html
+++ b/www/index.html
@@ -124,6 +124,7 @@
     <a onclick="sortData()" class="btn btn-outline-secondary" role="button">Sort</a>
     <a onclick="countData()" class="btn btn-outline-secondary" role="button">Count</a>
     <a onclick="deleteData()" class="btn btn-outline-primary" role="buton">Delete</a>
+    <a onclick="CorrectionData()" class="btn btn-outline-primary" role="buton">Correction</a>
   </div>
   <div>
     <input type="text" id="update" placeholder="更新">
