alldeleteボタンに変更

--- a/www/index.html
+++ b/www/index.html
@@ -110,6 +110,8 @@
           $("#display").html("delete fail:" + JSON.stringify(error));
     })
     }
+
+
   </script>
 </head>
 
@@ -124,7 +126,7 @@
     <a onclick="sortData()" class="btn btn-outline-secondary" role="button">Sort</a>
     <a onclick="countData()" class="btn btn-outline-secondary" role="button">Count</a>
     <a onclick="deleteData()" class="btn btn-outline-primary" role="buton">Delete</a>
-    <a onclick="CorrectionData()" class="btn btn-outline-primary" role="buton">Correction</a>
+    <a onclick="AlldeleteData()" class="btn btn-outline-primary" role="buton">Correction</a>
   </div>
   <div>
     <input type="text" id="update" placeholder="更新">
